--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "anypage",
   "version": "2.0.0",
   "description": "Static Resource Service",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "NISAL",
   "license": "MIT",
